test_files/negative/pagetree/cycle.stats
Version : 1.5
Incremental updates : 0
Neither updates nor object streams nor free objects nor encryption
Object count : 9
Filter : Raw -> 2 times
Objects of known type : 4
Known type rate : 0.444444
PDF error : Graph error : Cyclic tree structure for object 8 !
